--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "react-router-dom": "^6.4.4",
     "tailwindcss": "^3.2.4"
   }
