--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
     "@tailwindcss/typography": "^0.5.8",
     "react-router-dom": "^6.4.4",
     "tailwindcss": "^3.2.4"
-  }
+  },
+  "homepage": "."
 }
